--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,6 +4,7 @@
   --color-primary: #5f45f4;
   --color-code-bg: #fff4db;
   --color-code: #8a6534;
+  --color-border-light : rgba(251, 251, 255, 0.200);
   --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   --font-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
@@ -24,6 +25,8 @@
   --size-content: 54rem;
   --size-gutter: var(--space-5);
   --size-gap: var(--space-6);
+  --container-padding: clamp(2.5em, 8vw, 8em);
+  --section-padding: clamp(4em, 21vh, 12em);
 }
 html {
   -webkit-text-size-adjust: 100%;
@@ -42,15 +45,22 @@ body {
   font-weight: normal;
   margin: 0;
   word-wrap: break-word;
+  overflow: hidden;   /* Empêche tout débordement horizontal */
+  max-width: 100%;   /* Garde la largeur dans les limites de l'écran */
+}
+body.fixed {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
 }
 a {
   background-color: transparent;
   color: var(--color-primary);
   text-decoration: none;
-  font-weight: 500;
+  /* font-weight: 500;
   text-decoration: underline;
   text-decoration-thickness: 1.5px;
-  text-underline-offset: 2px;
+  text-underline-offset: 2px; */
 }
 a:active,
 a:hover {
@@ -75,11 +85,22 @@ h1 {
   margin-bottom: 3rem;
   padding: 0;
   line-height: var(--line-height-dense);
-  letter-spacing: -0.01em;
+  letter-spacing: normal;
+}
+h2 {
+  /* font-family: 'Dennis Sans', sans-serif; */
+  font-weight: 450;
+  font-style: normal;
+  font-size: calc(clamp(3.25em, 5vw, 4.5em)* .75);
+  line-height: 1.065;
+  margin-top: 0;
+  padding-top: 0;
+  margin-bottom: .66em;
 }
 h1 > b {
   color: var(--color-primary);
 }
+
 img {
   border-style: none;
   max-width: 100%;
@@ -106,13 +127,13 @@ hr {
 }
 * {
   box-sizing: inherit;
-}
+}/*
 *:before {
   box-sizing: inherit;
 }
 *:after {
   box-sizing: inherit;
-}
+} */
 hgroup,
 img,
 figure,
@@ -131,6 +152,7 @@ ol {
   margin-left: var(--space-4);
   list-style-position: outside;
   list-style-image: none;
+  list-style: none;
 }
 pre {
   margin-left: 0;
@@ -153,6 +175,7 @@ th {
 }
 li {
   margin-bottom: calc(var(--space-4) / 2);
+  list-style: none;
 }
 ol li,
 ul li {
@@ -221,4 +244,33 @@ pre code:after,
 pre tt:before,
 pre tt:after {
   content: none;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  position: relative;
+  padding: 0;
+  margin: 0;
+}
+
+.flex-col {
+  display:block;
+  flex: 1;
+  order: 2;
+  position: relative;
+}
+
+.section {
+  display: block;
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  position: relative;
+}
+
+/* Colonne ajustée pour les grands écrans */
+@media (min-width: 768px) {
+  .flex-col {
+    width: auto; /* Ajuste la largeur automatiquement */
+  }
 }
